# px4_gui

./: README.md  arm.sh  env.sh  gui.sh  last_check.txt  run.sh  test_relative_poses.sh  test_routine.sh  test_run.sh  test_velocity_yaw.sh
include/px4_gui/: main_window.hpp  qnode.hpp
px4_gui/: CMakeLists.txt  LICENSE  package.xml  potentially needed packages.txt  test_pick_place.sh
px4_gui/resources/: images.qrc
px4_gui/src/: main.cpp  main_window.cpp  qnode.cpp
src/: main_window.cpp  qnode.cpp
ui/: main_window.ui  main_window.ui.autosave
