<?xml version="1.0"?>
<package>
  <name>px4_gui</name>
  <version>0.2.0</version>
  <description>

     px4_gui

  </description>
  <maintainer email="1152802718@qq.com">xjh</maintainer>
  <author>xjh</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <!--build_depend>qt_build</build_depend-->
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>


  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>aerial_autonomy</build_depend>
  <run_depend>aerial_autonomy</run_depend>

  <build_depend>mavros_msgs</build_depend>
  <run_depend>mavros_msgs</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>
  <build_depend>qtbase5-dev</build_depend>
  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  
</package>
